--- a/sln_HttpClient/App.xaml
+++ b/sln_HttpClient/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:sln_HttpClient"
-             StartupUri="Views/PostManView.xaml">
+             StartupUri="Views/Test.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
