--- a/sln_HttpClient/Views/MainView.xaml
+++ b/sln_HttpClient/Views/MainView.xaml
@@ -1,14 +1,13 @@
-﻿<Window x:Class="sln_HttpClient.Views.MainView"
+﻿<UserControl x:Class="sln_HttpClient.Views.MainView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:sln_HttpClient.Views" xmlns:viewmodels="clr-namespace:sln_HttpClient.ViewModels" xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
-        mc:Ignorable="d"
-        Title="MainView" Height="450" Width="800">
-    <Window.DataContext>
+        mc:Ignorable="d"  Background="White" Height="450" Width="800">
+    <UserControl.DataContext>
         <viewmodels:MainViewModel/>
-    </Window.DataContext>
+    </UserControl.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="1.5*"/>
@@ -68,4 +67,4 @@
             </StackPanel>
         </Grid>
     </Grid>
-</Window>
+</UserControl>
