--- a/sln_HttpClient/Views/PostManView.xaml
+++ b/sln_HttpClient/Views/PostManView.xaml
@@ -1,14 +1,14 @@
-﻿<Window x:Class="sln_HttpClient.Views.PostManView"
+﻿<UserControl x:Class="sln_HttpClient.Views.PostManView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:sln_HttpClient.Views" xmlns:viewmodels="clr-namespace:sln_HttpClient.ViewModels" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
-        Title="PostManView" Height="800" Width="800">
-    <Window.DataContext>
+        Height="800" Width="800">
+    <UserControl.DataContext>
         <viewmodels:PostManViewModel/>
-    </Window.DataContext>
+    </UserControl.DataContext>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
@@ -61,4 +61,4 @@
 
         </Frame>
     </Grid>
-</Window>
+</UserControl>
