--- a/sln_HttpClient/Views/Test.xaml
+++ b/sln_HttpClient/Views/Test.xaml
@@ -4,9 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:sln_HttpClient.Views"
-        xmlns:viewmodels="clr-namespace:sln_HttpClient.ViewModels" xmlns:interfaces="clr-namespace:sln_HttpClient.Interfaces" xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
+        xmlns:viewmodels="clr-namespace:sln_HttpClient.ViewModels" xmlns:interfaces="clr-namespace:sln_HttpClient.Interfaces" xmlns:b="http://schemas.microsoft.com/xaml/behaviors" xmlns:syntaxeditor="http://schemas.actiprosoftware.com/winfx/xaml/syntaxeditor"
         mc:Ignorable="d"
-        Title="Test" Height="450" Width="800" Closing="Window_Closing">
+        Title="Test" Height="800" Width="900" Closing="Window_Closing">
     <Window.DataContext>
         <viewmodels:TestViewModel/>
     </Window.DataContext>
@@ -18,11 +18,12 @@
             <TabControl.ItemTemplate>
                 <DataTemplate>
                     <TextBlock>
-                        <Run Text="{Binding Tabs.TabName}"/>
-                        <Hyperlink Click="Hyperlink_Click" >X</Hyperlink>
+                        <Run Text="{Binding TabName}"/>
+                        <Hyperlink Command="{Binding CloseCommand}" >X</Hyperlink>
                     </TextBlock>
                 </DataTemplate>
             </TabControl.ItemTemplate>
+           
             <!--<TabControl.Resources>
 
                 <DataTemplate DataType="{x:Type local:PostManView}" x:Name="DataTemp">
